# rust-practical-lab

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE-CODE-SESSION-PLAN.md  Cargo.toml  MEMORY.md  README.md
.github/workflows/: ci.yml
benches/parser_bench/: Cargo.toml
crates/concurrency_demo/: Cargo.toml
crates/error_demo/: Cargo.toml
crates/error_demo/src/: main.rs
crates/ffi_demo/: Cargo.toml
crates/hello_cli/: Cargo.toml
crates/hello_lib/: Cargo.toml
crates/log_parser/: Cargo.toml
crates/power_blocks/: Cargo.toml
crates/wasm_demo/: Cargo.toml
docs/: README.md  decisions.md  heartbeat.md  repo-brief.md
logs/: 2026-03-27-session.md
scripts/: check_phase6.ps1  check_phase6.sh
