[package]
name = "parser_bench"
version = "0.1.0"
edition = "2021"
description = "Criterion benchmarks for log_parser"
license = "MIT"
repository = "https://github.com/itprodirect/rust-practical-lab"

[[bench]]
name = "parser_bench"
harness = false

[dependencies]
log_parser = { path = "../../crates/log_parser", version = "0.1.0" }

# criterion is the standard Rust benchmarking library. It provides statistical
# analysis (mean, median, confidence intervals), HTML reports, and regression
# detection — all on stable Rust. This is the tool real Rust projects use to
# track performance, unlike the built-in #[bench] which requires nightly.
criterion = { version = "0.5", features = ["html_reports"] }
