[package]
name = "hello_cli"
version = "0.1.0"
edition = "2021"
description = "CLI wrapper for hello_lib"
license = "MIT"
repository = "https://github.com/itprodirect/rust-practical-lab"

[dependencies]
hello_lib = { path = "../hello_lib", version = "0.1.0" }

# clap is the de facto CLI argument parser in the Rust ecosystem.
# The "derive" feature lets us define args as a struct with attributes
# instead of building a parser manually — less boilerplate, free --help/--version.
clap = { version = "4", features = ["derive"] }
